@@ -5,7 +5,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
-package de.ii.ogcapi.collections.queryables.app;
+package de.ii.ogcapi.collections.schema.infra;
 
 import static de.ii.ogcapi.common.domain.QueriesHandlerCommon.GROUP_COLLECTIONS_READ;
 
@@ -13,12 +13,15 @@ import com.github.azahnen.dagger.annotations.AutoBind;
 import com.google.common.collect.ImmutableList;
 import de.ii.ogcapi.collections.domain.EndpointSubCollection;
 import de.ii.ogcapi.collections.domain.ImmutableOgcApiResourceData;
-import de.ii.ogcapi.collections.queryables.domain.QueryablesConfiguration;
-import de.ii.ogcapi.features.core.domain.FeaturesCoreProviders;
+import de.ii.ogcapi.collections.schema.app.QueryParameterProfileSchema;
+import de.ii.ogcapi.collections.schema.app.SchemaBuildingBlock;
+import de.ii.ogcapi.collections.schema.app.SchemaCacheFeatures;
+import de.ii.ogcapi.collections.schema.domain.SchemaConfiguration;
 import de.ii.ogcapi.features.core.domain.ImmutableQueryInputSchema;
 import de.ii.ogcapi.features.core.domain.JsonSchemaCache;
 import de.ii.ogcapi.features.core.domain.QueriesHandlerSchema;
 import de.ii.ogcapi.features.core.domain.QueriesHandlerSchema.Query;
+import de.ii.ogcapi.features.core.domain.QueriesHandlerSchema.QueryInputSchema;
 import de.ii.ogcapi.features.core.domain.SchemaFormatExtension;
 import de.ii.ogcapi.features.core.domain.SchemaType;
 import de.ii.ogcapi.foundation.domain.ApiEndpointDefinition;
@@ -62,93 +65,69 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * @title Queryables
- * @path collections/{collectionId}/queryables
- * @langEn The Queryables resource identifies and describes the properties that can be referenced in
- *     filter expressions to select specific features that meet the criteria identified in the
- *     filter. The response is a JSON Schema document that describes a single JSON object where each
- *     property is a queryable.
- * @langDe Die Ressource Queryables identifiziert und beschreibt die Eigenschaften, auf die in
- *     Filterausdrücken verwiesen werden kann. Die Antwort ist ein JSON-Schema-Dokument, das ein
- *     einzelnes JSON-Objekt beschreibt, bei dem jede Eigenschaft eine abfragbare Eigenschaft ist.
+ * @title Feature Schema
+ * @path collections/{collectionId}/schema
+ * @langEn JSON Schema of the features of the collection `collectionId`.
+ * @langDe JSON Schema der Features der Collection `collectionId`.
  * @ref:formats {@link de.ii.ogcapi.features.core.domain.SchemaFormatExtension}
  */
 @Singleton
 @AutoBind
-@SuppressWarnings("PMD.AvoidInstantiatingObjectsInLoops")
-public class EndpointQueryables extends EndpointSubCollection
-    implements ConformanceClass, ApiExtensionHealth {
+public class EndpointSchema extends EndpointSubCollection
+    implements ApiExtensionHealth, ConformanceClass {
 
-  private static final Logger LOGGER = LoggerFactory.getLogger(EndpointQueryables.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(EndpointSchema.class);
 
   private static final List<String> TAGS = ImmutableList.of("Discover data collections");
 
   private final QueriesHandlerSchema queryHandler;
-  private final FeaturesCoreProviders providers;
+  private final ValueStore valueStore;
   private final JsonSchemaCache schemaCache;
 
   @Inject
-  public EndpointQueryables(
+  public EndpointSchema(
       ExtensionRegistry extensionRegistry,
       QueriesHandlerSchema queryHandler,
-      ValueStore valueStore,
-      FeaturesCoreProviders featuresCoreProviders) {
+      ValueStore valueStore) {
     super(extensionRegistry);
     this.queryHandler = queryHandler;
-    this.providers = featuresCoreProviders;
-    this.schemaCache =
-        new SchemaCacheQueryables(valueStore.forType(Codelist.class)::asMap, featuresCoreProviders);
+    this.valueStore = valueStore;
+    this.schemaCache = new SchemaCacheFeatures(valueStore.forType(Codelist.class)::asMap);
   }
 
   @Override
   public List<String> getConformanceClassUris(OgcApiDataV2 apiData) {
-    return ImmutableList.of(
-        "http://www.opengis.net/spec/ogcapi-features-3/1.0/conf/queryables",
+    return List.of(
         "http://www.opengis.net/spec/ogcapi-common-3/1.0/conf/schemas",
-        "http://www.opengis.net/spec/ogcapi-common-3/1.0/conf/queryables");
-  }
-
-  @Override
-  public boolean isEnabledForApi(OgcApiDataV2 apiData) {
-    return apiData.getCollections().keySet().stream()
-        .anyMatch(collectionId -> isEnabledForApi(apiData, collectionId));
-  }
-
-  @Override
-  public boolean isEnabledForApi(OgcApiDataV2 apiData, String collectionId) {
-    return apiData
-        .getExtension(QueryablesConfiguration.class, collectionId)
-        .filter(QueryablesConfiguration::isEnabled)
-        .filter(QueryablesConfiguration::endpointIsEnabled)
-        .isPresent();
+        "http://www.opengis.net/spec/ogcapi-common-3/1.0/conf/advanced-property-roles",
+        "http://www.opengis.net/spec/ogcapi-common-3/1.0/conf/references",
+        "http://www.opengis.net/spec/ogcapi-common-3/1.0/conf/returnables-and-receivables");
   }
 
   @Override
   public Class<? extends ExtensionConfiguration> getBuildingBlockConfigurationType() {
-    return QueryablesConfiguration.class;
+    return SchemaConfiguration.class;
   }
 
   @Override
   public List<? extends FormatExtension> getResourceFormats() {
-    if (formats == null) {
+    if (formats == null)
       formats = extensionRegistry.getExtensionsForType(SchemaFormatExtension.class);
-    }
     return formats;
   }
 
   @Override
   protected ApiEndpointDefinition computeDefinition(OgcApiDataV2 apiData) {
-    final ImmutableApiEndpointDefinition.Builder definitionBuilder =
+    ImmutableApiEndpointDefinition.Builder definitionBuilder =
         new ImmutableApiEndpointDefinition.Builder()
             .apiEntrypoint("collections")
-            .sortPriority(ApiEndpointDefinition.SORT_PRIORITY_QUERYABLES);
-    final String subSubPath = "/queryables";
-    final String path = "/collections/{collectionId}" + subSubPath;
-    final List<OgcApiPathParameter> pathParameters =
-        getPathParameters(extensionRegistry, apiData, path);
-    final Optional<OgcApiPathParameter> optCollectionIdParam =
-        pathParameters.stream().filter(param -> "collectionId".equals(param.getName())).findAny();
-    if (optCollectionIdParam.isEmpty()) {
+            .sortPriority(ApiEndpointDefinition.SORT_PRIORITY_SCHEMA);
+    String subSubPath = "/schema";
+    String path = "/collections/{collectionId}" + subSubPath;
+    List<OgcApiPathParameter> pathParameters = getPathParameters(extensionRegistry, apiData, path);
+    Optional<OgcApiPathParameter> optCollectionIdParam =
+        pathParameters.stream().filter(param -> param.getName().equals("collectionId")).findAny();
+    if (!optCollectionIdParam.isPresent()) {
       LOGGER.error(
           "Path parameter 'collectionId' missing for resource at path '"
               + path
@@ -157,27 +136,19 @@ public class EndpointQueryables extends EndpointSubCollection
       final OgcApiPathParameter collectionIdParam = optCollectionIdParam.get();
       final boolean explode = collectionIdParam.isExplodeInOpenApi(apiData);
       final List<String> collectionIds =
-          explode ? collectionIdParam.getValues(apiData) : ImmutableList.of("{collectionId}");
+          (explode) ? collectionIdParam.getValues(apiData) : ImmutableList.of("{collectionId}");
       for (String collectionId : collectionIds) {
         final List<OgcApiQueryParameter> queryParameters =
             getQueryParameters(extensionRegistry, apiData, path, collectionId);
         final String operationSummary =
-            "retrieve the queryables of the feature collection '" + collectionId + "'";
-        final Optional<String> operationDescription =
-            Optional.of(
-                "The Queryables resources identifies the properties that can be "
-                    + "referenced in filter expressions to select specific features that meet the criteria identified in the filter. "
-                    + "The response is a JSON Schema document that describes a single JSON object where each property is a queryable.\n\n"
-                    + "Note: The queryables schema does not specify a schema of any object that can be retrieved from the API.\n\n"
-                    + "The descriptive metadata (title and description of the property) as well as the schema information (data type and "
-                    + "constraints like a list of allowed values or minimum/maxmimum values are provided to support clients to construct"
-                    + "meaningful queries for the data.");
-        final String resourcePath = "/collections/" + collectionId + subSubPath;
-        final ImmutableOgcApiResourceData.Builder resourceBuilder =
+            "retrieve the schema of features in the feature collection '" + collectionId + "'";
+        Optional<String> operationDescription = Optional.empty(); // TODO
+        String resourcePath = "/collections/" + collectionId + subSubPath;
+        ImmutableOgcApiResourceData.Builder resourceBuilder =
             new ImmutableOgcApiResourceData.Builder()
                 .path(resourcePath)
                 .pathParameters(pathParameters);
-        final Map<MediaType, ApiMediaTypeContent> responseContent = getResponseContent(apiData);
+        Map<MediaType, ApiMediaTypeContent> responseContent = getResponseContent(apiData);
         ApiOperation.getResource(
                 apiData,
                 resourcePath,
@@ -188,11 +159,11 @@ public class EndpointQueryables extends EndpointSubCollection
                 operationSummary,
                 operationDescription,
                 Optional.empty(),
-                getOperationId("getQueryables", collectionId),
+                getOperationId("getSchema", collectionId),
                 GROUP_COLLECTIONS_READ,
                 TAGS,
-                QueryablesBuildingBlock.MATURITY,
-                QueryablesBuildingBlock.SPEC)
+                SchemaBuildingBlock.MATURITY,
+                SchemaBuildingBlock.SPEC)
             .ifPresent(
                 operation -> resourceBuilder.putOperations(HttpMethods.GET.name(), operation));
         definitionBuilder.putResources(resourcePath, resourceBuilder.build());
@@ -203,16 +174,16 @@ public class EndpointQueryables extends EndpointSubCollection
   }
 
   @GET
-  @Path("/{collectionId}/queryables")
+  @Path("/{collectionId}/schema")
   @Produces({"application/schema+json", "text/html"})
-  public Response getQueryables(
+  public Response getSchema(
       @Auth Optional<User> optionalUser,
       @Context OgcApi api,
       @Context ApiRequestContext requestContext,
       @Context UriInfo uriInfo,
       @PathParam("collectionId") String collectionId) {
 
-    String definitionPath = "/collections/{collectionId}/queryables";
+    String definitionPath = "/collections/{collectionId}/schema";
     checkPathParameter(
         extensionRegistry, api.getData(), definitionPath, "collectionId", collectionId);
 
@@ -222,36 +193,38 @@ public class EndpointQueryables extends EndpointSubCollection
     List<Profile> requestedProfiles =
         (List<Profile>)
             Objects.requireNonNullElse(
-                queryParameterSet.getTypedValues().get(QueryParameterProfileQueryables.PROFILE),
+                queryParameterSet.getTypedValues().get(QueryParameterProfileSchema.PROFILE),
                 List.of());
 
-    QueryablesConfiguration configuration =
+    SchemaConfiguration schemaConfiguration =
         api.getData()
-            .getExtension(QueryablesConfiguration.class, collectionId)
+            .getExtension(SchemaConfiguration.class, collectionId)
             .orElseThrow(
                 () ->
                     new IllegalStateException(
-                        "Queryables configuration not found for collection: " + collectionId));
+                        "Schema configuration not found for collection: " + collectionId));
 
-    List<Profile> defaultProfiles =
+    List<Profile> defaultProfilesSchema =
         extensionRegistry.getExtensionsForType(Profile.class).stream()
             .filter(
                 profile ->
-                    configuration.getDefaultProfiles().containsKey(profile.getProfileSet())
+                    schemaConfiguration.getDefaultProfiles().containsKey(profile.getProfileSet())
                         && profile
                             .getId()
                             .equals(
-                                configuration.getDefaultProfiles().get(profile.getProfileSet())))
+                                schemaConfiguration
+                                    .getDefaultProfiles()
+                                    .get(profile.getProfileSet())))
             .toList();
 
-    final QueriesHandlerSchema.QueryInputSchema queryInput =
+    QueryInputSchema queryInput =
         new ImmutableQueryInputSchema.Builder()
             .from(getGenericQueryInput(api.getData()))
             .collectionId(collectionId)
-            .type(SchemaType.QUERYABLES)
-            .schemaCache(schemaCache)
             .profiles(requestedProfiles)
-            .defaultProfilesResource(defaultProfiles)
+            .defaultProfilesResource(defaultProfilesSchema)
+            .type(SchemaType.RETURNABLES_AND_RECEIVABLES)
+            .schemaCache(this.schemaCache)
             .build();
 
     return queryHandler.handle(Query.SCHEMA, queryInput, requestContext);
@@ -259,6 +232,6 @@ public class EndpointQueryables extends EndpointSubCollection
 
   @Override
   public Set<Volatile2> getVolatiles(OgcApiDataV2 apiData) {
-    return Set.of(providers.getFeatureProviderOrThrow(apiData));
+    return Set.of(valueStore);
   }
 }
